# Torq

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  README.md  TODO.txt  mkdocs.yml  pyproject.toml
doc/: architecture.md  barriers.md  conventions.md  extending.md  limits.md  mainpage.md  ownership_diagram.dot  qp_formulation.md  quickstart.md  sim_to_real.md  system_diagram.dot  tasks.md  tuning_guide.md  tutorials.md
docs/: index.md
docs/architecture/: controller.md  hal.md  kinematics.md  overview.md  robot-system.md
docs/getting-started/: building.md  installation.md  running.md
docs/guides/: adding-robot.md
docs/html/: Barriers_8hpp.html  Barriers_8hpp_source.html  Controller_8hpp.html  Controller_8hpp.js  Controller_8hpp_source.html  Gui_8hpp.html  Gui_8hpp.js  Gui_8hpp_source.html  HardwareInterface_8hpp.html  HardwareInterface_8hpp_source.html  InverseKinematics_8hpp.html  InverseKinematics_8hpp_source.html  Limits_8hpp.html  Limits_8hpp_source.html  MujocoDriver_8hpp.html  MujocoDriver_8hpp.js  MujocoDriver_8hpp_source.html  PinocchioModel_8hpp.html  PinocchioModel_8hpp_source.html  RobotSystem_8hpp.html  RobotSystem_8hpp_source.html  SCSPort_8hpp.html  SCSPort_8hpp_source.html  SMS__STS__Port_8hpp.html  SMS__STS__Port_8hpp.js  SMS__STS__Port_8hpp_source.html  ServoDriver_8hpp.html  ServoDriver_8hpp_source.html  Tasks_8hpp.html  Tasks_8hpp_source.html  annotated.html  annotated_dup.js  architecture.html  architecture_8md.html  barriers_8md.html  barriers_page.html  classLogger-members.html  classLogger.html  classLogger.js  classLogger_1_1LogStream-members.html  (+305 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+85 more)
docs/theme/: main.html
docs/theme/css/: notion.css
docs/theme/js/: theme.js
documentation/: conf.py  index.rst  requirements.txt
documentation/_static/: custom.css
documentation/_templates/: globaltoc.html  layout.html
documentation/pages/: api.rst  architecture.rst  barriers.rst  conventions.rst  extending.rst  limits.rst  qp_formulation.rst  quickstart.rst  sim_to_real.rst  tasks.rst  tuning_guide.rst
include/openmanip/: Controller.hpp  Gui.hpp  HardwareInterface.hpp  InverseKinematics.hpp  Limits.hpp  MujocoDriver.hpp  PinocchioModel.hpp  RobotSystem.hpp  Tasks.hpp  Visualizer.hpp  logger.hpp  utils.hpp
include/torq/: Barriers.hpp  Controller.hpp  Gui.hpp  HardwareInterface.hpp  InverseKinematics.hpp  Limits.hpp  MujocoDriver.hpp  PinocchioModel.hpp  RobotSystem.hpp  ServoDriver.hpp  Tasks.hpp  logger.hpp  utils.hpp
include/torq/scservo/: INST.h  SCS.h  SCSPort.hpp  SMS_STS_Port.hpp
src/barriers/: Barriers.cpp
src/control/: Controller.cpp  InverseKinematics.cpp
src/core/: RobotSystem.cpp
src/gui/: Gui.cpp
src/hardware/: MujocoDriver.cpp  ServoDriver.cpp
src/hardware/scservo/: SCS.cpp  SCSPort.cpp  SMS_STS_Port.cpp
src/kinematics/: PinocchioModel.cpp
src/limits/: Limits.cpp
src/physics/: MujocoDriver.cpp
src/tasks/: Tasks.cpp
src/tools/: world_to_body_cam.py
src/visualization/: Visualizer.cpp
workspace/: imgui.ini
workspace/arm_ur5e/src/: main.cpp
workspace/kuka/src/: main.cpp
workspace/models/SO101/: README.md  so101_new_calib.urdf  so101_new_calib.xml
workspace/models/kuka_iiwa_14/: scene.xml
workspace/models/universal_robots_ur5e/: scene.xml  ur5e.xml
workspace/panda/src/: main.cpp
workspace/so101/: CMakeLists.txt  so101.conf
workspace/so101/src/: main.cpp  robot_calibration.cpp
